add maven as build tool